--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
         <p class="inleiding">
             De Bouwgaard ligt op Centerumeiland op IJbrug.
         </p>
-        <img src="./afbeelingen/foto-locatie1.jpg" alt="Foto van de locatie van de bouwgaard">
+        <img src="./afbeelingen/logo-rose.png" class="logo" alt="logo voor de bouwgaard">
         <p> 
             De Bouwgaard is een tijdelijke buurttuin van Centrumeiland. Buren kunnen hier elkaar ontmoeten en tuinieren. De Bouwgaard is een initiatief van het projectteam centrumeiland van de gemeente Amsterdam en de bewoners.
         </p>
+        <img src="./afbeelingen/foto-locatie1.jpg" alt="Foto van de locatie van de bouwgaard">
         <p>
             Het idee van de Bouwgaard was van de bewoners en met de hulp van de gemeente is het gemaakt. De gemeente Amsterdam heeft het terrein, de picknickbanken, de hekken en een startbudget klaar gezet voor de bewoners. 
         </p>
