--- a/inschrijven.html
+++ b/inschrijven.html
@@ -18,8 +18,8 @@
     <main>
       <p class="inleiding">
         De Bouwgaard wordt verzorgt door de buren zelf en ze zoeken dus altijd nieuwe leden.
-    </p>
-      <img src="./afbeelingen/bouwgaard-boven.png" alt="foto van de Bouwgaard van boven">
+      </p>
+      <img src="./afbeelingen/bouwgaard-boven2.jpg" alt="foto van de Bouwgaard van boven">
       <p> 
         Ze zijn op zoek naar mensen die regelmatig een handje willen helpen. iedereen is welkom, met ervaring of zonder, jong of oud.
       </p>
